Alignment problem in UserWidget is fixed and also unnecessary dependencies are removed

--- a/sales-dashboard/src/styles/css/infobox.css
+++ b/sales-dashboard/src/styles/css/infobox.css
@@ -25,6 +25,7 @@
 .amount {
     margin: 10px 0px;
     display: flex;
+    font-size: 35px;
     align-items: center;
 }
 
