--- a/sales-dashboard/src/styles/css/widget.css
+++ b/sales-dashboard/src/styles/css/widget.css
@@ -18,6 +18,7 @@
 .widget-list {
     padding: 0px;
     margin: 0px;
+    width: 100%;
     list-style: none;
 }
 
@@ -25,7 +26,7 @@
     margin: 20px 0px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .widget-image {
